--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,11 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 html {
   font-family: 'Roboto', sans-serif;
+  font-size: 16px;
 }
 body {
-  background-color: red;
 }
