--- a/assets/scss/header/_navbar-info.scss
+++ b/assets/scss/header/_navbar-info.scss
@@ -1,3 +1,6 @@
+@use "../presets" as *;
+@use "../mixins" as *;
+
 .navbar-info {
   margin-bottom: 1px;
   padding: $gap 0;
@@ -8,6 +11,10 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @include md {
+      flex-direction: column;
+    }
   }
 }
 
@@ -15,7 +22,11 @@
   display: flex;
   align-items: center;
 
-  gap: $gap-sm $gap-lg;
+  gap: $gap-xs $gap-xl;
+
+  @include xx {
+    flex-direction: column;
+  }
 
   &__phone {
     color: $color-primary;
