--- a/assets/scss/header/_navbar-primary.scss
+++ b/assets/scss/header/_navbar-primary.scss
@@ -1,3 +1,6 @@
+@use "../presets" as *;
+@use "../mixins" as *;
+
 .navbar-primary {
   padding: 18px 0;
 
@@ -19,7 +22,7 @@
   &__link {
     display: block;
 
-    padding: $gap-sm;
+    padding: $gap-xs;
 
     color: $color-primary;
 
