--- a/assets/scss/presets/_variables.scss
+++ b/assets/scss/presets/_variables.scss
@@ -1,8 +1,18 @@
-$width: 1110px;
-
 $font-family: "Roboto", sans-serif;
 $font-size: 16px;
+$line-height-lg: 1.43;
+$line-height-sm: 1.19;
+
+$xl: 1110px;
+$lg: 992px;
+$md: 768px;
+$sm: 576px;
+$xs: 480px;
+$xx: 420px;
+$ux: 360px;
 
 $gap: 20px;
-$gap-sm: $gap * 0.5;
-$gap-lg: $gap * 2;
+$gap-xs: $gap * 0.5;
+$gap-sm: $gap * 0.75;
+$gap-lg: $gap * 1.5;
+$gap-xl: $gap * 2;
